conformance/tests/httproute-invalid-cross-namespace-backend-ref.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invalid-cross-namespace-backend-ref
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - backendRefs:
    - name: web-backend
      namespace: gateway-conformance-web-backend
      port: 8080
